syntax = "proto3";

import "google/protobuf/timestamp.proto";

package terminal;

enum CopyTicks {
  UNKNOWN = 0;
  ALL = -1;
  INFO = 1;
  TRADE = 2;
}

service Terminal {
  rpc CopyTicksRange (CopyTicksRangeRequest) returns (CopyTicksRangeReply) {}
}

message CopyTicksRangeRequest {
  string symbol = 1;
  google.protobuf.Timestamp fromdate = 2;
  google.protobuf.Timestamp todate = 3;
  CopyTicks type = 4;
}

message CopyTicksRangeReply {
}
